--- a/charts/valkey-backup/values.yaml
+++ b/charts/valkey-backup/values.yaml
@@ -3,6 +3,10 @@
 # Declare variables to be passed into your templates.
 
 
+# This parameter is required.
+# Name of the instance to connect and backup
+#valkey_name: valkey-sentinel-ssl
+
 #namespace: default
 
 #Docker image to be used 
