Saving changes to fix the name of the secret that stores the authentication to valkey

--- a/charts/valkey-backup/values.yaml
+++ b/charts/valkey-backup/values.yaml
@@ -5,7 +5,7 @@
 
 # This parameter is required.
 # Name of the instance to connect and backup
-#valkey_name: valkey-sentinel-ssl
+#valkey_instance_name: valkey-sentinel-ssl
 
 #namespace: default
 
