--- a/charts/valkeybackup/Chart.yaml
+++ b/charts/valkeybackup/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: valkey-backup
+name: valkeybackup
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
